--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -31,7 +31,7 @@ debug: re
 
 run: all
 	@$(SCREENCLEAR)
-	@./$(NAME) $(TESTFILE) aa x
+	@./$(NAME) $(TESTFILE) aa xx
 
 clean:
 	@printf "$(R)$(B)Delete: $(T)$(Y)$(DEPENDDIR) $(BUILDDIR) $(BUILDLOG)$(T)\n"
